[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
description = "Parse Google LocationHistory.json"
homepage = "https://github.com/etrombly/location_history.git"
license = "MIT OR Apache-2.0"
keywords = ["google", "location", "history", "tracking"]
name = "location_history"
readme = "README.md"
repository = "https://github.com/etrombly/location_history.git"
version = "0.2.1"
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"
